# vrc3d

./: .gitignore  LICENSE  README.md  camera.py  frag.glsl  matrix.py  photos.py  pyproject.toml  scene.py  shader.py  shadow_quad.frag.glsl  shadow_quad.vert.glsl  shadows.frag.glsl  shadows.py  shadows.vert.glsl  sky.frag.glsl  sky.py  sky.vert.glsl  sun.py  texture_manager.py  textures.py  vector.py  vert.glsl  virtualrc.py  vrc3d.py  world.frag.glsl  world.vert.glsl
photos/: README
tests/: test_matrix.py
