[tool.poetry]
name = "vrc3d"
version = "0.1.0"
description = "3D Virtual RC"
authors = ["Adam Kelly <adam@cthulahoops.org>"]

[tool.poetry.dependencies]
python = "^3.8"
pyglet = "^1.5.18"
rctogether = "^0.3.3"
aiohttp = "^3.7.4"
skyfield = "^1.39"
Python-FreeType = "^0.6"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
